# bazel-demo-app

./: WORKSPACE  bazel-bazel-demo-app  bazel-bin  bazel-out  bazel-testlogs  go.mod
cmd/: BUILD.bazel  main.go
handlers/: BUILD.bazel  handler.go
pkg/greetings/: BUILD.bazel
