load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/gator1/bazel-demo-app/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//handlers",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
